[risk=low][no ticket] Renaming of free tier in many locations (#9092)
Co-authored-by: Eric Rollins <erollins@broadinstitute.org>